crates/macro/tests/negative/artifacts/artifacts_borrow_require_borrowing.stderr
error: proc macro panicked
  --> tests/negative/artifacts/artifacts_borrow_require_borrowing.rs:20:5
   |
20 | /     graph! {
21 | |         InvalidGraph<'a> {
22 | |             GetNumber() -> (number) >>
23 | |             PipeNumber(&'a number)
24 | |         }
25 | |     }
   | |_____^
   |
   = help: message: missing borrowed artifact `number` for node call
